# Z-Butler

./: .__atomic-writeg2vjnypv  .env  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  README.MD  VERSION  Z-Butler.code-workspace  app.py  compose.yaml  keep_alive.py  line_old.py  main.py  pylintrc  pyproject.toml  requirements.txt  run.bat  run.fish  run.ps1  run.sh
Bot Scratches/: bruno.json  get tweet.bru
Cogs/: EventHandlers.py  Fun.py  Misc.py  Moderation.py  Music.py  Quotes.py  Stats.py  User.py  Zed.py  event_handlers.py  fun.py  greetings.py  help.py  joinsorleaves.py  lord_lorkhan.py  misc.py  moderation.py  music.py  onCommandError.py  ping.py  quotes.py  stats.py  the_elder_scrolls.py  user.py
api/: anime_quotes.py  animes.py  get_twitch_user.py  images.py  lyrics.py  music.py  spotify_search.py  twitch.py  twitch_bearer.py
api/data/: SpotiModels.py  ZembedField.py
classes/: Help.py  MongoDBConnection.py  MongoDBHelperClient.py  SongMetaDataConverter.py  SongMetadataConverter.py  SpotiClient.py  TwitchClient.py  Zembed.py  embed_factory.py  embedder_machine.py  help.py  mongo_db_connection.py  mongo_db_helper_client.py  mongo_db_management.py  print_codes.py  singleton_class.py  spotify_client.py  tweepy_wrapper.py  tweet_model.py  twitch_client.py  twitter_.py
classes/Converters/: song_metadata_converter.py
cogs/: event_handlers.py  fun.py  miscellaneous.py  moderation.py  music.py  quotes.py  stats.py  user.py  zed.py
config/: __init__.py  activity_embeds.py  colors.py  embed.py  env.py  links.py  main.py  moderation_embeds.py
config/embed/: activity.py  ban.py  eight_ball.py  env_cfg.py  gif.py  hello.py  help.py  how_gay.py  kick.py  leave.py  lyrics.py  moderation.py  mute_unmute.py  no_perms.py  pfp.py  ping.py  playing_act.py  quote.py  server.py  song.py  spotify.py  streaming_act.py  strike.py  tweet.py  user_stats.py  welcome.py
functions/: create_welcome_image.py  cryptonator.py  delete_welcome_image.py  eight_ball_api.py  embed_factory.py  extract_guild_data.py  find_gif.py  gay_commentary.py  genius.py  get_twitch_user.py  helpers.py  image_manipulation.py  lyrics.py  mdb_connection.py  quotes_api.py  song.py  spotify_search.py
modules/: __init__.py  help.py  z_help_command.py
modules/animals_api/: models.py
modules/api/: animals.py  images.py  music.py
modules/coinpaprika/: __init__.py  coin_manager.py  coin_map.py
modules/embedder/: __init__.py  embedder_machine.py  zembed_models.py
modules/http/: http_async_client.py
modules/japan_heaven/: __init__.py
modules/melody_wave/: melody_models.py  melody_wave.py
modules/mongo/: __init__.py  db_manager.py
modules/networking/: __init__.py  http_async_client.py  http_async_downloader.py  models.py
modules/sneepy/: __init__.py  sneeper.py  sneeps.py
modules/spotify_helper/: __init__.py  spoti_models.py  spotify_client.py
modules/spotifyer/: spotify_client.py
modules/tenor_api/: __init__.py
modules/twitching/: __init__.py  twitch_auth_client.py  (+1 more)
src/: __init__.py  app.py
tests/: test.py  test_animals_api.py  test_anime_quoter_module.py  test_http_downloader.py  test_melody_wave_module.py  test_pagination.py  test_spotify_client_module.py
util/: colors.py  gay_commentary.py  genius.py  mdb_connection.py  print_codes.py  twitch_bearer.py
utils/: __init__.py  env.py  help.py  helpers.py  pagination_helper.py
(+89 files in other folders)
