
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "z-butler"
version = "3.18"
description = "Z butler bot for your server"
authors = ["DroidZed <41507665+DroidZed@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = { extras = ["http2"], version = "^0.27.0" }
numpy = "^1.26.4"
beautifulsoup4 = "^4.12.3"
rich = "^13.7.1"
motor = "^3.4.0"
py-cord = { extras = ["speed"], version = "^2.6.0" }
orjson = "^3.10.0"
pynacl = "^1.5.0"
msgspec = "^0.18.6"
aiofiles = "^23.2.1"
pillow = "^10.3.0"
aiohttp = { extras = ["speedups"], version = "^3.9.3" }
python-decouple-typed = "^3.11.0"
coinpaprika-async = "^3.1.3"
loguru = "^0.7.2"
gtts = "^2.5.1"
typing-extensions = "^4.11.0"
pyttsx3 = "^2.90"
baseconvert = "^1.0.0a4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.5.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-httpx = "^0.30.0"
pytest-asyncio = "^0.23.6"

[tool.pytest]
minversion = 6.0
testpaths = ["tests"]
asyncio_mode = "strict"
addopts = ["--import-mode=importlib", "-ra -q"]
