
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "z-butler"
version = "3.18"
description = "Z butler bot for your server"
authors = ["DroidZed <41507665+DroidZed@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"
numpy = "^2.1.1"
beautifulsoup4 = "^4.12.3"
rich = "^13.8.1"
motor = "^3.6.0"
py-cord = "^2.6.1"
orjson = "^3.10.7"
pynacl = "^1.5.0"
msgspec = "^0.18.6"
aiofiles = "^24.1.0"
pillow = "^10.4.0"
aiohttp = "^3.10.5"
python-decouple-typed = "^3.11.0"
coinpaprika-async = "^3.1.3"
loguru = "^0.7.2"
gtts = "^2.5.3"
typing-extensions = "^4.12.2"
baseconvert = "^2.0.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.6.7"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-httpx = "^0.31.2"
pytest-asyncio = "^0.24.0"

[tool.pytest]
minversion = 6.0
testpaths = ["tests"]
asyncio_mode = "strict"
addopts = ["--import-mode=importlib", "-ra -q"]
